--- a/src/main/resources/public/template/cmdb/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attributeSearch.html
@@ -134,7 +134,7 @@
 
             let tdAttrType = document.createElement('td');
             tdAttrType.style.width = '10%';
-            tdAttrType.className = 'align-left';
+            tdAttrType.className = 'align-center';
             tdAttrType.innerText = data.attributeType;
 
             let tdAttrDesc = document.createElement('td');
