--- a/src/main/resources/public/template/cmdb/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attributeView.html
@@ -11,7 +11,7 @@
     <div class="flex-column edit">
         <div class="cmdb-attribute-header">
             <div class="header-title flex-row align-items-baseline">
-                <h1 th:text="#{cmdb.attribute.label.name}"></h1>
+                <h1 th:text="#{cmdb.attribute.label.view}"></h1>
                 <h6 class="description" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
             </div>
         </div>
