#9884 CI Type 상세정보 등록, 수정 및 삭제 구현
- 버튼 수정

--- a/src/main/resources/public/template/cmdb/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/typeEdit.html
@@ -130,7 +130,7 @@
                         document.getElementById('typeDesc').value = responseJson.typeDesc;
                         document.getElementById('typeIcon').value = responseJson.typeIcon;
                         document.getElementById('typeClass').value = responseJson.defaultClassId;
-                        if (responseJson.ptypeId !== null) {
+                        if (responseJson.ptypeId !== '') {
                             document.querySelector('#btnUpdate').removeAttribute('disabled');
                             document.querySelector('#btnDelete').removeAttribute('disabled');
                         } else {
