--- a/src/main/resources/public/template/cmdb/classEdit.html
+++ b/src/main/resources/public/template/cmdb/classEdit.html
@@ -25,8 +25,10 @@
             </div>
         </div>
     </div>
-    <div class="role-content flex-fill">
-        <div class="list" id="cmdbClassList"></div>
+    <div class="cmdb-class-content flex-fill">
+        <div class="list-tree">
+            <div id="treeList"></div>
+        </div>
     </div>
 </th:block>
 <th:block layout:fragment="aside">
@@ -84,99 +86,84 @@
 <th:block layout:fragment="pageScript">
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
-        let CMDB_CLASS_CREATE = false;
-        let CMDB_CLASS_DELETE = false;
-        let CMDB_CLASS_UPDATE = false;
         const STATUS_SUCCESS = '0';
         const STATUS_SUCCESS_EDIT_CLASS = '1';
 
         window.onload = function () {
-            getCmdbClassList(true);
+            document.getElementById('search').focus();
+            onCreate();
 
-            if (document.getElementById('btnUpdate') !== null) {
-                CMDB_CLASS_UPDATE = true;
-            }
-
-            if (document.getElementById('btnRegist') !== null) {
-                CMDB_CLASS_CREATE = true;
-            }
-
-            if (document.getElementById('btnDelete') !== null) {
-                CMDB_CLASS_DELETE = true;
-            }
-
-            if (document.getElementById('txtClassId').value !== null && document.getElementById('txtClassId').value !== '') {
-                if (CMDB_CLASS_UPDATE) {
-                    document.getElementById('btnUpdate').style.display = 'inline-block';
-                }
-                if (CMDB_CLASS_CREATE) {
-                    document.getElementById('btnRegist').style.display = 'none';
-                }
-            }
-
-            let cmdbClassList = document.querySelectorAll('td[name=className]');
-            for (let i = 0; i < cmdbClassList.length; i++) {
-                cmdbClassList[i].addEventListener('click', function () {
-                    let activeTr = document.querySelector('tr.active');
-                    if (activeTr !== null) {
-                        activeTr.classList.remove('active');
+            function getCmdbClassList() {
+                tree.load({
+                    search: encodeURIComponent(document.getElementById('search').value),
+                    source: 'ciClass',
+                    target: 'treeList',
+                    text: 'className',
+                    totalCount: true,
+                    selectedNode: function (response) {
+                        onGetDetail(response.id)
                     }
-                    this.parentElement.classList.add('active');
-                    if (PATTERN_UPDATE) {
-                        document.getElementById('btnUpdate').style.display = 'inline-block';
-                    }
-                    if (PATTERN_CREATE) {
-                        document.getElementById('btnRegist').style.display = 'none';
-                    }
-                    onGetDetail(this.id);
                 });
             }
 
-            document.getElementById('search').focus();
+            getCmdbClassList();
+            document.getElementById('root').click()
+
+            /** CMDB Class 상세 정보 **/
+            function onGetDetail(cmdbClassId) {
+                const opt = {
+                    method: 'get',
+                    url: '/rest/cmdb/classes/' + encodeURIComponent(cmdbClassId),
+                    callbackFunc: function (response) {
+                        let responseJson = JSON.parse(response.responseText);
+                        let attribute = document.getElementById('attribute');
+                        document.getElementById('txtClassId').value = responseJson.classId;
+                        document.getElementById('txtPClassId').value = responseJson.pclassId;
+                        document.getElementById('txtPClassName').value = responseJson.pclassName;
+                        document.getElementById('txtClassName').value = responseJson.className;
+                        document.getElementById('txtClassDesc').value = responseJson.classDesc;
+                        if (responseJson.editable) {
+                            document.getElementById('btnUpdate').removeAttribute('disabled');
+                            document.getElementById('btnDelete').removeAttribute('disabled');
+                        } else {
+                            document.getElementById('btnUpdate').disabled = true;
+                            document.getElementById('btnDelete').disabled = true;
+                        }
+                        while (attribute.hasChildNodes()) {
+                            attribute.removeChild(attribute.firstChild);
+                        }
+                        if (responseJson.extendsAttributes !== null) {
+                            responseJson.extendsAttributes.forEach(function (data) {
+                                drawAttribute({key: data.attributeId, value: data.attributeName}, false);
+                            });
+                        }
+                        if (responseJson.attributes !== null) {
+                            responseJson.attributes.forEach(function (data) {
+                                drawAttribute({key: data.attributeId, value: data.attributeName}, true);
+                            });
+                        }
+                        onEdit();
+                    }
+                };
+                aliceJs.sendXhr(opt);
+            }
+
+            OverlayScrollbars(document.querySelector('.list-tree'), {className: 'scrollbar'});
             document.getElementById('search').addEventListener('keyup', function () {
-                getCmdbClassList(false);
+                getCmdbClassList();
             });
-
-            OverlayScrollbars(document.querySelectorAll('.cmdb-class-content-edit'), {className: 'scrollbar'})
-        };
-
-        /** CMDB Class 상세 정보 **/
-        function onGetDetail(cmdbClassName) {
-            const opt = {
-                method: 'get',
-                url: '/rest/cmdb/classes/' + encodeURIComponent(cmdbClassName),
-                callbackFunc: function (response) {
-                    let responseJson = JSON.parse(response.responseText);
-                    let attribute = document.getElementById('attribute');
-                    document.getElementById('txtClassId').value = responseJson.classId;
-                    document.getElementById('txtPClassId').value = responseJson.pclassId;
-                    document.getElementById('txtPClassName').value = responseJson.pclassName;
-                    document.getElementById('txtClassName').value = responseJson.className;
-                    document.getElementById('txtClassDesc').value = responseJson.classDesc;
-                    if (responseJson.editable) {
-                        document.getElementById('btnUpdate').removeAttribute('disabled');
-                        document.getElementById('btnDelete').removeAttribute('disabled');
-                    } else {
-                        document.getElementById('btnUpdate').disabled = true;
-                        document.getElementById('btnDelete').disabled = true;
-                    }
-                    while (attribute.hasChildNodes()) {
-                        attribute.removeChild(attribute.firstChild);
-                    }
-                    if (responseJson.extendsAttributes !== null) {
-                        responseJson.extendsAttributes.forEach(function (data) {
-                            drawAttribute({key: data.attributeId, value: data.attributeName}, false);
-                        });
-                    }
-                    if (responseJson.attributes !== null) {
-                        responseJson.attributes.forEach(function (data) {
-                            drawAttribute({key: data.attributeId, value: data.attributeName}, true);
-                        });
-                    }
+            OverlayScrollbars(document.querySelectorAll('.cmdb-class-content-edit'), {className: 'scrollbar'});
+            OverlayScrollbars(document.getElementById('txtClassDesc'), {
+                className: 'scrollbar',
+                resize: 'vertical',
+                sizeAutoCapable: true,
+                textarea: {
+                    dynHeight: false,
+                    dynWidth: false,
+                    inheritedAttrs: "class"
                 }
-            };
-            aliceJs.sendXhr(opt);
-        }
+            });
+        };
 
         /** 추가 버튼 **/
         function onCreate() {
@@ -185,23 +172,26 @@
                 attribute.removeChild(attribute.firstChild);
             }
 
+            document.getElementById('btnUpdate').style.display = 'none';
+            document.getElementById('btnDelete').style.display = 'none';
+            document.getElementById('btnRegist').style.display = 'block';
             document.getElementById('txtClassId').value = '';
             document.getElementById('txtPClassId').value = '';
             document.getElementById('txtClassName').value = '';
-            document.getElementById('txtPClassName').value = '';
             document.getElementById('txtClassDesc').value = '';
             document.getElementById('btnExport').style.display = 'none';
 
-            if (CMDB_CLASS_UPDATE) {
-                document.getElementById('btnUpdate').style.display = 'none';
-                document.getElementById('btnExport').style.display = 'none';
+            let selectedNode = tree.getTreeSelectNode();
+            if (selectedNode !== null) {
+                document.getElementById('txtPClassName').value = selectedNode.dataset.name;
+                document.getElementById('txtPClassId').value = selectedNode.id;
             }
-            if (CMDB_CLASS_CREATE) {
-                document.getElementById('btnRegist').style.display = 'inline-block';
-            }
-            if (CMDB_CLASS_DELETE) {
-                document.getElementById('btnDelete').style.display = 'none';
-            }
+        }
+
+        function onEdit() {
+            document.getElementById('btnUpdate').style.display = 'block';
+            document.getElementById('btnDelete').style.display = 'block';
+            document.getElementById('btnRegist').style.display = 'none';
         }
 
         /** CMDB Class 등록, 수정 **/
@@ -210,10 +200,11 @@
             if (isEmpty('txtClassName', 'cmdb.class.msg.enterClassName')) return;
 
             let obj = {};
+            obj.classId = document.getElementById('txtClassId').value;
             obj.className = document.getElementById('txtClassName').value;
             obj.classDesc = document.getElementById('txtClassDesc').value;
 
-            if (pClassId !== '' || pClassId === null) {
+            if (pClassId !== '' || pClassId !== null) {
                 obj.pclassId = pClassId;
             }
 
@@ -268,54 +259,6 @@
             };
             aliceJs.sendXhr(opt)
         }
-
-        /** CMDB Class List 출력 기능 **/
-        function getCmdbClassList(showProgressbar) {
-            const data = {
-                search: encodeURIComponent(document.getElementById('search').value)
-            };
-            const urlParam = 'search=' + data.search;
-            const opt = {
-                method: 'get',
-                url: '/cmdb/class?' + urlParam,
-                showProgressbar: showProgressbar,
-                callbackFunc: function (response) {
-                    document.getElementById('cmdbClassList').innerHTML = response.responseText;
-                    let cmdbClassList = document.querySelectorAll('td[name=className]');
-                    document.getElementById('totalCount').textContent = i18n.msg("common.label.count", cmdbClassList.length);
-                    if (response.responseText.indexOf('no-data-found') === -1) {
-                        for (let i = 0; i < cmdbClassList.length; i++) {
-                            cmdbClassList[i].style.cursor = 'pointer';
-                            cmdbClassList[i].addEventListener('click', function () {
-                                let activeTr = document.querySelector('tr.active');
-                                if (activeTr !== null) {
-                                    activeTr.classList.remove('active');
-                                }
-                                this.parentElement.classList.add('active');
-                                if (CMDB_CLASS_UPDATE) {
-                                    document.getElementById('btnExport').style.display = 'inline-block';
-                                    document.getElementById('btnUpdate').style.display = 'inline-block';
-                                }
-                                if (CMDB_CLASS_CREATE) {
-                                    document.getElementById('btnRegist').style.display = 'none';
-                                }
-                                if (CMDB_CLASS_DELETE) {
-                                    document.getElementById('btnDelete').style.display = 'inline-block';
-                                }
-                                onGetDetail(this.id);
-                            });
-                        }
-                        if (cmdbClassList.length > 0) {
-                            document.querySelector('td[name=className]').click();
-                        }
-                        OverlayScrollbars(document.querySelector('.list-body'), {className: 'scrollbar'});
-                    } else {
-                        onCreate();
-                    }
-                }
-            };
-            aliceJs.sendXhr(opt);
-        };
 
         function drawAttribute(param, editable) {
             const divRow = document.createElement('div');
