#9979 CI Type Class 선택 모달 구현

--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -162,7 +162,8 @@
 .code-content,
 .numbering-pattern-content,
 .numbering-rule-content,
-.cmdb-attribute-content {
+.cmdb-attribute-content,
+.cmdb-type-content  {
   padding: 0.9375rem 3.75rem; // 15px 60px
   background-color: $light-gray;
 }
