--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -255,6 +255,7 @@
 
                         let processId = response.responseText;
                         sessionStorage.setItem('alice_processes-edit-' + processId, 'firstLoading');
+
                         let specs = 'left=' + _left + ',top=' + _top;
                         specs += ',menubar=no,toolbar=no,location=no,status=no,titlebar=no,scrollbars=yes,resizable=no';
                         window.open('/process/' + processId + '/edit', 'process_' + processId + '_edit', 'width=' + _width + ',height=' + _height + ',' + specs);
@@ -275,6 +276,8 @@
 
             let specs = 'left=' + _left + ',top=' + _top;
             specs += ',menubar=no,toolbar=no,location=no,status=no,titlebar=no,scrollbars=yes,resizable=no';
+
+            sessionStorage.setItem('alice_processes-edit-' + processId, '');
             window.open('/process/' + processId + '/edit', 'process_' + processId + '_edit', 'width=' + _width + ',height=' + _height + ','+ specs);
         }
 
