--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4232,12 +4232,14 @@ span.node label {
   cursor: pointer;
 }
 
-span.node_selected {
+span.node_selected,
+span.modal_node_selected {
   padding: 0.25rem 0.188rem 0.25rem 0;
   background-color: #87CEFF;
   cursor: pointer;
 }
-span.node_selected label {
+span.node_selected label,
+span.modal_node_selected label {
   padding-left: 0.5rem;
   color: #0060A5;
   cursor: pointer;
