#9979 CI Type Class 선택 모달 구현
- MR feedback

--- a/src/main/resources/public/template/cmdb/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/typeEdit.html
@@ -276,7 +276,7 @@
                             document.querySelector('#typeClass').value = response.dataset.name;
                             document.querySelector('#typeClassId').value = response.id;
                         } else {
-                            aliceJs.alertWarning([[#{cmdb.type.msg.selectAvilableClass}]]);
+                            aliceJs.alertWarning([[#{cmdb.type.msg.selectAvailableClass}]]);
                         }
                     }
                 });
