#9886 CI Class 화면에서 Class에 Attribute 추가하기 기능 구현 MR 응대

--- a/src/main/resources/public/template/cmdb/classEdit.html
+++ b/src/main/resources/public/template/cmdb/classEdit.html
@@ -303,6 +303,7 @@
             deleteBtn.addEventListener('click', function () {
                 aliceJs.confirmIcon(i18n.msg('cmdb.class.msg.confirmDeleteAttribute'), function () {
                     const row = deleteBtn.parentNode;
+                    classAttributeMap.delete(inputElem.id);
                     row.remove();
                 }, null);
             });
