CMDB html 파일 분리

--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -71,7 +71,7 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
-    <script th:src="@{/public/assets/js/cmdb/cmdb.attribute.js}"></script>
+    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         const STATUS_SUCCESS = '0';
