--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -65,7 +65,7 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
-    <script th:src="@{/public/assets/js/cmdb/cmdb.attribute.js}"></script>
+    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         window.onload = function () {
