--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4131,6 +4131,25 @@ body.modal-active {
   background-position-x: center;
   background-position-y: center;
 }
+.component .field-group .field-content .ci-table {
+  width: 100%;
+  background-color: #ffffff;
+  margin-top: 0.625rem;
+}
+.component .field-group .field-content .ci-table tr th, .component .field-group .field-content .ci-table tr td {
+  padding: 0.625rem;
+  border-left: none;
+  border-right: none;
+}
+.component .field-group .field-content .ci-table tr th:first-child, .component .field-group .field-content .ci-table tr td:first-child {
+  border-left: 0.0625rem solid transparent;
+}
+.component .field-group .field-content .ci-table tr th:last-child, .component .field-group .field-content .ci-table tr td:last-child {
+  border-right: 0.0625rem solid transparent;
+}
+.component .field-group .field-content .ci-table tr input[type=text] {
+  width: 100%;
+}
 .component .btn-dr-table-row-add {
   position: absolute;
   top: 1.25rem;
