--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -200,6 +200,28 @@
           &.icon-arrow-up { @include background($icon-folder-path + 'icon_arrow_up.svg', 0.625rem 0.375rem, no-repeat, center, center, null); } // 10px 6px
         }
       }
+      // CI 컴포넌트
+      .ci-table {
+        width: 100%;
+        background-color: $ci-table-bg-color;
+        margin-top: 0.625rem; // 10px
+        tr { 
+            th, td { 
+              padding: $element-indent;
+              border-left: none;
+              border-right: none;
+
+              &:first-child {
+                border-left: $element-border-width solid transparent;
+              }
+              &:last-child {
+                border-right: $element-border-width solid transparent;
+              }
+            }
+
+            input[type=text] { width: 100%; }
+        }
+      }
     }
   }
 
