--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -79,6 +79,9 @@ $custom-code-btn-font-color:                  $dark-gray;
 // Dynamic Row Table 컴포넌트
 $dr-table-bg-color:                           $white;
 
+// CI 컴포넌트
+$ci-table-bg-color:                           $white;
+
 ////////////////////////// context menu /////////////////////////
 $context-menu-width:                          11.25rem; // 180px
 $context-menu-height:                         14.06rem; // 225px
