DMZ 오류 개발 서버 적용
# application.yml 환경설정 변경 (기본포트 추가, 구글/카카오 redirectUri 추가)
# ktlin오류 수정 : AliceLabelService.kt
# 포탈 공지사항 상세보기 : 엔터 적용

--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -24,7 +24,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="view-content flex-row">
-                <span class="view-text auto-break" th:text="${notice?.noticeContents}"/>
+                <span class="view-text auto-break space-line" th:text="${notice?.noticeContents}"/>
             </div>
             <div class="horizontal-bar"></div>
             <div class="file-uploader-view">
