1. inputbox 세부설정 구현 2. 등록, 수정 기능 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2297,6 +2297,10 @@ button .icon-plus {
 .cmdb-attribute-content-edit .btn-minus {
   padding: 0;
 }
+.custom-code-content-edit .attribute,
+.cmdb-attribute-content-edit .attribute {
+  margin-left: 4rem;
+}
 
 .numbering-rule-content-edit .select-pattern-type {
   width: 20rem;
