--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -388,6 +388,10 @@
     width: 28.31rem; // 453px
   }
   .btn-minus { padding: 0; }
+
+  .attribute {
+    margin-left: 4rem;
+  }
 }
 // 업무흐름 관리 > 문서번호
 .numbering-rule-content-edit {
