일감 #9641( 카테고리 말줄임 오류) 수정입니다.

--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -268,7 +268,8 @@ select {
   font-weight: $element-font-weight;
   line-height: $element-line-height;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  overflow: hidden;
   &:after {
     content:"";
     width: 0;
