--- a/src/main/resources/public/template/cmdb/ci/ciList.html
+++ b/src/main/resources/public/template/cmdb/ci/ciList.html
@@ -7,27 +7,30 @@
 <table class="list-table">
     <thead class="list-head">
     <tr class="flex-row align-items-center">
-        <th style="width: 5%"></th>
-        <th style="width: 10%" class="align-center" th:text="#{cmdb.ci.label.type}"></th>
-        <th style="width: 15%" class="align-center" th:text="#{cmdb.ci.label.ciNo}"></th>
-        <th style="width: 15%" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
-        <th style="width: 25%" class="align-left" th:text="#{cmdb.ci.label.description}"></th>
-        <th style="width: 15%" class="align-left" th:text="#{cmdb.ci.label.tag}"></th>
-        <th style="width: 10%" class="align-center" th:text="#{cmdb.ci.label.export}"></th>
+        <th style="width: 5%;"></th>
+        <th style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.type}"></th>
+        <th style="width: 20%;" class="align-center" th:text="#{cmdb.ci.label.ciNo}"></th>
+        <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
+        <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.description}"></th>
+        <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.tag}"></th>
+        <th style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.export}"></th>
     </tr>
     </thead>
     <tbody class="list-body">
+    <input type="hidden" id="totalCount" th:value="${ciListCount}"/>
     <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciList)}">
-        <td style="width:100%" colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
+        <td style="width: 100%;" colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
     <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(ciList)}" th:each="ci: ${ciList}">
-        <th style="width: 5%"></th>
-        <th style="width: 10%" class="align-center" th:text="#{ci.ciNo}"></th>
-        <th style="width: 15%" class="align-center" th:text="#{ci.ciTypeName}"></th>
-        <th style="width: 15%" class="align-left" th:text="#{ci.ciName}"></th>
-        <th style="width: 25%" class="align-left" th:text="#{ci.ciDesc}"></th>
-        <th style="width: 15%" class="align-left" th:text="#{ci.ciTag}"></th>
-        <td style="width: 10%" class="align-center">
+        <td style="width: 5%;">
+            <img width="27" height="27"/>
+        </td>
+        <td style="width: 10%;" class="align-center" th:text="#{ci.ciTypeName}"></td>
+        <td style="width: 20%;" class="align-center" th:text="#{ci.ciNo}"></td>
+        <td style="width: 15%;" class="align-left" th:text="#{ci.ciName}"></td>
+        <td style="width: 25%;" class="align-left" th:text="#{ci.ciDesc}"></td>
+        <td style="width: 15%;" class="align-left" th:text="#{ci.ciTag}"></td>
+        <td style="width: 10%;" class="align-center">
             <button type="button">
                 <span class="icon-edit"></span>
             </button>
