--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -7,34 +7,176 @@
     <title th:text="#{cmdb.ci.label.ciInquiry}"></title>
 </head>
 <body>
-th:block layout:fragment="content">
-<div class="cmdb-attribute-header">
-    <div class="header-title flex-row align-items-baseline">
-        <h1 th:text="#{cmdb.ci.label.management}"></h1>
-        <h6 class="description" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
-    </div>
-    <div class="header-search flex-row">
-        <input type="hidden" sec:authorize="hasAuthority('board.admin.update')" th:name="isRole"
-               th:value="true"/>
-        <input type="hidden" sec:authorize="!hasAuthority('board.admin.update')" th:name="isRole"
-               th:value="false"/>
-        <form id="searchFrm">
-            <input class="search col-5 mr-2" id="search" name="search" type="text" maxlength="100"
-                   th:placeholder="#{cmdb.ci.label.searchPlaceholder}"/>
-            <span id="spanTotalCount" class="txt-num"></span>
-        </form>
-        <div class="ml-auto">
-            <button type="button" class="default-fill" onclick="importAttribute()"
-                    sec:authorize="hasAuthority('cmdb.ci.create')" th:text="#{cmdb.ci.btn.import}"></button>
-            <button type="button" class="default-fill" onclick="location.href='/cmdb/attributes/new'"
-                    sec:authorize="hasAuthority('cmdb.ci.create')" th:text="#{common.btn.add}"></button>
+<th:block layout:fragment="content">
+    <div class="cmdb-ci-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{cmdb.ci.label.ciInquiry}"></h1>
+            <h6 class="description" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
+        </div>
+        <div class="header-search flex-row">
+            <input type="hidden" sec:authorize="hasAuthority('cmdb.ci.create') || hasAuthority('cmdb.ci.update')"
+                   th:name="isRole" th:value="true"/>
+            <input type="hidden" sec:authorize="!hasAuthority('cmdb.ci.create') && !hasAuthority('cmdb.ci.update')"
+                   th:name="isRole" th:value="false"/>
+            <form id="searchFrm">
+                <select id="searchGroupName" name="searchGroupName" class="col-3">
+                    <option value="" th:text="#{cmdb.ci.label.all}" selected></option>
+                    <option th:each="ciType:${ciTypeList}" th:value="${ciType.code}"
+                            th:text="${ciType.codeValue}"></option>
+                </select>
+                <input class="search col-3" id="search" name="search" type="text" maxlength="100"
+                       th:placeholder="#{cmdb.ci.label.searchPlaceholder}"/>
+                <input class="search col-3" id="tagSearch" name="tagSearch" type="text" maxlength="100"
+                       th:placeholder="#{cmdb.ci.label.tagPlaceholder}"/>
+                <span id="spanTotalCount" class="txt-num"></span>
+            </form>
+            <div class="ml-auto">
+                <button type="button" class="default-fill" sec:authorize="hasAuthority('cmdb.ci.create')"
+                        th:text="#{cmdb.ci.btn.import}"></button>
+            </div>
         </div>
     </div>
-</div>
-<div class="cmdb-attribute-content flex-fill">
-    <div class="list" id="attributeList"></div>
-</div>
+    <div class="cmdb-ci-content flex-fill">
+        <div class="list" id="ciList"></div>
+    </div>
 </th:block>
-
 </body>
+<th:block layout:fragment="pageScript">
+    <script type="text/javascript">
+        /*<![CDATA[*/
+        let offsetCount = 0;
+        window.onload = function () {
+            document.getElementById('search').focus();
+            document.querySelectorAll('#search, #tagSearch').forEach(search => {
+                search.addEventListener('keyup', function () {
+                    searchCis(false);
+                });
+            });
+            document.getElementById('searchGroupName').addEventListener('change', searchCis.bind(null, false), false);
+            searchCis(false);
+        }
+
+        function searchCis(isScroll) {
+            let urlParam = '';
+            if (isScroll) {
+                if (offsetCount === 0) {
+                    offsetCount = aliceJs.searchDataCount;
+                }
+                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
+                restSubmit('get', '/rest/cmdb/cis?' + urlParam, isScroll);
+            } else {
+                offsetCount = 0;
+                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
+                restSubmit('get', '/cmdb/cis?' + urlParam, isScroll);
+            }
+        }
+
+        function restSubmit(method, url, isScroll) {
+            const opt = {
+                method: method,
+                url: url,
+                async: false,
+                showProgressbar: false,
+                callbackFunc: function (response) {
+                    if (isScroll) {
+                        let dataList = JSON.parse(response.responseText);
+                        if (dataList.length > 0) {
+                            aliceJs.showTotalCount(dataList[0].totalCount);
+                            document.getElementById('totalCount').value = dataList[0].totalCount;
+                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                offsetCount = offsetCount + aliceJs.searchDataCount;
+                                dataList.forEach(function (data) {
+                                    getDataTemplate(data);
+                                });
+                            }
+                        }
+                    } else {
+                        document.getElementById('ciList').innerHTML = response.responseText;
+                        aliceJs.showTotalCount(document.getElementById('totalCount').value);
+                    }
+
+                    OverlayScrollbars(document.querySelector('.list-body'), {
+                        className: 'scrollbar',
+                        callbacks: {
+                            onScroll: function (e) {
+                                const scrollHeight = e.target.scrollHeight;
+                                const scrollTop = e.target.scrollTop;
+                                const clientHeight = e.target.clientHeight;
+                                if (scrollHeight - scrollTop === clientHeight) {
+                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                        searchCis(true);
+                                    }
+                                }
+                            }
+                        }
+                    });
+                }
+            };
+            aliceJs.sendXhr(opt);
+        }
+
+        function getDataTemplate(data) {
+            let div = document.querySelector('.list-body .os-content');
+            let tr = document.createElement('tr');
+            tr.className = 'flex-row align-items-center';
+
+            let tdCiIcon = document.createElement('td');
+            tdCiIcon.style.width = '5%';
+            let imgCiIcon = document.createElement('img');
+            imgCiIcon.style.width = '27';
+            imgCiIcon.style.height = '27';
+            imgCiIcon.src = '';
+            tdCiIcon.appendChild(imgCiIcon);
+
+            let tdCiTypeName = document.createElement('td');
+            tdCiTypeName.style.width = '10%';
+            tdCiTypeName.className = 'align-center';
+            tdCiTypeName.innerText = data.ciTypeName;
+
+            let tdCiNo = document.createElement('td');
+            tdCiNo.style.width = '20%';
+            tdCiNo.className = 'align-center';
+            tdCiNo.innerText = data.ciNo;
+
+            let tdCiName = document.createElement('td');
+            tdCiName.style.width = '15%';
+            tdCiName.className = 'align-left';
+            tdCiName.innerText = data.ciName;
+
+            let tdCiDesc = document.createElement('td');
+            tdCiDesc.style.width = '25%';
+            tdCiDesc.className = 'align-left';
+            tdCiDesc.innerText = data.ciDesc;
+
+            let tdCiTag = document.createElement('td');
+            tdCiTag.style.width = '15%';
+            tdCiTag.className = 'align-left';
+            tdCiTag.innerText = data.ciTag;
+
+            let tdCiExport = document.createElement('td');
+            tdCiExport.style.width = '10%';
+            tdCiExport.className = 'align-center';
+            tdCiExport.innerText = '';
+
+            if (document.getElementsByName('isRole')[0].value === 'true') {
+                let btnExport = document.createElement('button');
+                let spanExport = document.createElement('span');
+                spanExport.className = 'icon-edit';
+                btnExport.appendChild(spanExport);
+                tdCiExport.appendChild(btnExport);
+            }
+
+            tr.appendChild(tdCiIcon);
+            tr.appendChild(tdCiTypeName);
+            tr.appendChild(tdCiNo);
+            tr.appendChild(tdCiName);
+            tr.appendChild(tdCiDesc);
+            tr.appendChild(tdCiTag);
+            tr.appendChild(tdCiExport);
+            div.appendChild(tr);
+        }
+
+        /*]]>*/
+    </script>
+</th:block>
 </html>
