--- a/src/main/resources/public/template/cmdb/ci/ciList.html
+++ b/src/main/resources/public/template/cmdb/ci/ciList.html
@@ -25,11 +25,11 @@
         <td style="width: 5%;">
             <img width="27" height="27"/>
         </td>
-        <td style="width: 10%;" class="align-center" th:text="#{ci.ciTypeName}"></td>
-        <td style="width: 20%;" class="align-center" th:text="#{ci.ciNo}"></td>
-        <td style="width: 15%;" class="align-left" th:text="#{ci.ciName}"></td>
-        <td style="width: 25%;" class="align-left" th:text="#{ci.ciDesc}"></td>
-        <td style="width: 15%;" class="align-left" th:text="#{ci.ciTag}"></td>
+        <td style="width: 10%;" class="align-center" th:text="${ci.typeId}"></td>
+        <td style="width: 20%;" class="align-center" th:text="${ci.ciNo}"></td>
+        <td style="width: 15%;" class="align-left" th:text="${ci.ciName}"></td>
+        <td style="width: 25%;" class="align-left" th:text="${ci.ciDesc}"></td>
+        <td style="width: 15%;" class="align-left"></td>
         <td style="width: 10%;" class="align-center">
             <button type="button">
                 <span class="icon-edit"></span>
