--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -61,7 +61,7 @@
             } else {
                 offsetCount = 0;
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/cmdb/ci?' + urlParam, isScroll);
+                restSubmit('get', '/cmdb/cis?' + urlParam, isScroll);
             }
         }
 
